--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="header">
@@ -14,21 +14,10 @@
     </div>
     <div id="content-area">
         
-        <div id="gameboard">
-            <div>X</div>
-            <div>O</div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div>X</div>
-            <div></div>
-            <div></div>
-            <div>O</div>
-        </div>
 
     </div>
     <div id="footer">
-
+        <div id="test">Test2</div>
     </div>
 </body>
 </html>
