board can be drawn, stored and updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
     </div>
     <div id="content-area">
-        
+        <div id="start-menu">
+            <div>Let's Begin!</div>
+            <div id="start-buttons">
+                <button>Single Player</button>
+                <button>Two Player</button>
+            </div>
+        </div>
 
     </div>
     <div id="footer">
