--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 <body>
     <div id="header">
-
     </div>
     <div id="content-area">
-        <div id="start-menu">
-            <div>Let's Begin!</div>
-            <div id="start-buttons">
-                <button>Single Player</button>
-                <button>Two Player</button>
+        <!-- <form>
+            <label for="player-name">Player Name: </label>
+            <input type="text" name="player-name" id="player-name">
+            <div class="mark-select">
+                <div class="mark-select-label">Select Marker</div>
+                <div class="mark-select-buttons">
+                    <button>X</button>
+                    <button>O</button>
             </div>
-        </div>
-
+            </div>
+        </form> -->
     </div>
     <div id="footer">
         <div id="test">Test2</div>
